forge 0.93 and small fixes